Fixed switch slider alignment

--- a/src/patternfly/components/Switch/switch.scss
+++ b/src/patternfly/components/Switch/switch.scss
@@ -4,19 +4,19 @@
 .#{$switch} {
   // Switch - the vars for this file don't follow our normal order so that the IE11 script can convert the vars correctly
   --#{$switch}--FontSize: var(--pf-t--global--font--size--sm);
-  --#{$switch}--ColumnGap: var(--pf-t--global--spacer--sm); // update at breaking change
-  
+  --#{$switch}--ColumnGap: var(--pf-t--global--spacer--sm);
+
   // Switch icon
   --#{$switch}__toggle-icon--FontSize: calc(var(--#{$switch}--FontSize) * .625); // We don't use an icon font-size here because this value allows the icon to scale relative to the switch's font-size.
   --#{$switch}__toggle-icon--Color: var(--pf-t--global--icon--color--inverse);
   --#{$switch}__toggle-icon--Left: calc(var(--#{$switch}--FontSize) * .4);
   --#{$switch}__toggle-icon--Offset: #{pf-size-prem(2px)}; // this value is created to handle sizing of the toggle and therefore the width of the toggle and its transform value.
   --#{$switch}__input--disabled__toggle-icon--Color: var(--pf-t--global--icon--color--disabled);
-  
+
   // Switch
   --#{$switch}--LineHeight: var(--pf-t--global--font--line-height--body);
   --#{$switch}--Height: auto;
-  
+
   // Switch input
   --#{$switch}__input--checked__toggle--BackgroundColor: var(--pf-t--global--color--brand--default);
   --#{$switch}__input--checked__toggle--before--TranslateX: calc(100% + var(--#{$switch}__toggle-icon--Offset));
@@ -30,7 +30,7 @@
   --#{$switch}__input--focus__toggle--OutlineWidth: var(--pf-t--global--border--width--strong);
   --#{$switch}__input--focus__toggle--OutlineOffset: var(--pf-t--global--spacer--xs);
   --#{$switch}__input--focus__toggle--OutlineColor: var(--pf-t--global--color--brand--default);
-  
+
   // Switch toggle
   --#{$switch}__toggle--Height: calc(var(--#{$switch}--FontSize) * var(--#{$switch}--LineHeight));
   --#{$switch}__toggle--BackgroundColor: var(--pf-t--global--background--color--control--default);
@@ -39,8 +39,7 @@
   --#{$switch}__toggle--BorderRadius: var(--pf-t--global--border--radius--pill);
   --#{$switch}__toggle--before--Width: calc(var(--#{$switch}--FontSize) - var(--#{$switch}__toggle-icon--Offset));
   --#{$switch}__toggle--before--Height: var(--#{$switch}__toggle--before--Width);
-  --#{$switch}__toggle--before--Top: calc((var(--#{$switch}__toggle--Height) - var(--#{$switch}__toggle--before--Height)) / 2);
-  --#{$switch}__toggle--before--Left: var(--#{$switch}__toggle--before--Top);
+  --#{$switch}__toggle--before--Left: calc((var(--#{$switch}__toggle--Height) - var(--#{$switch}__toggle--before--Height)) / 2);
   --#{$switch}__toggle--before--BorderRadius: var(--pf-t--global--border--radius--large);
   --#{$switch}__toggle--before--BoxShadow: var(--pf-t--global--box-shadow--md);
   --#{$switch}__toggle--before--Transition: transform .25s ease 0s;
@@ -92,8 +91,8 @@
       &::before {
         @include pf-v5-bidirectional-style(
           $prop: transform,
-          $ltr-val: translateX(var(--#{$switch}__input--checked__toggle--before--TranslateX)),
-          $rtl-val: translateX(#{pf-v5-calc-inverse(var(--#{$switch}__input--checked__toggle--before--TranslateX))})
+          $ltr-val: translate(var(--#{$switch}__input--checked__toggle--before--TranslateX), -50%),
+          $rtl-val: translate(#{pf-v5-calc-inverse(var(--#{$switch}__input--checked__toggle--before--TranslateX))}, -50%)
         );
 
         background-color: var(--#{$switch}__input--checked__toggle--before--BackgroundColor);
@@ -153,7 +152,8 @@
 
   &::before {
     position: absolute;
-    inset-block-start: var(--#{$switch}__toggle--before--Top);
+    inset-block-start: 50%;
+    transform: translateY(-50%);
     inset-inline-start: var(--#{$switch}__toggle--before--Left);
     display: block;
     width: var(--#{$switch}__toggle--before--Width);
